Semi FIxed stretched 3D objects in screenshot and added disclaimer for landscape mode, that force player to rotate smartphone. TO DO: test screen.lock function

--- a/style.css
+++ b/style.css
@@ -72,3 +72,26 @@
     background-color: white;
     box-shadow: 0 0 5px black;
 }
+
+@media screen and (orientation: landscape) {
+    html {
+      /* Rotate the content container */
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      /* Set content width to viewport height */
+      width: 100vh;
+      /* Set content height to viewport width */
+      height: 100vw;
+      overflow-x: hidden;
+      position: absolute;
+      top: 100%;
+      left: 0;
+    }
+
+    html::after {
+        content: 'Utilizza il dispositivo in verticale. in caso non dovessi più vedere i modelli ricarica la pagina.';
+        width: 90%;
+        min-height: 50%;
+        background: rgba(255, 55, 0, 0.233);
+    }
+  }
